# knock

./: CHANGELOG.md  LICENSE  README.en.md  README.md  SECURITY.md  index.html  install.ps1  install.sh  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
hooks/: hooks.json
hooks/examples/: knock-critical-gate.sh
scripts/: smoke-test.sh
skills/knock-annotate/: SKILL.md
skills/knock-ask/: SKILL.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc.rs  lib.rs  main.rs
